# naive-secret-sharing

./: .gitignore  Cargo.toml  README.md  generate_sympy_examples.py
src/: f2x.rs  galoisfields.rs  gf2.rs  lib.rs  main.rs  poly.rs  secretsharing.rs
