[package]
name = "shamirsecretsharing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shamir"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
toml = "0.5"

